# ai_mcp_server

./: .env.example  README.md  main.py  pyproject.toml
alternate_simple_server/: README.md  simple_calc_server.py  test_mcp_server.py
docs/: usage.txt
integration_gemini_ai/: README.md  client.py  server.py
mcp_vs_function_calling/: README.md  function_calling.py  tools.py
mcp_with_docker/: README.md  client.py  server.py
simple_server_examples/: client_stdio.py  client_streamable_http.py  demo_server.py
src/: simple_calc_server.py  test.py
