[project]
name = "ai-mcp-server"
version = "0.1.0"
description = "Building AI MCP Servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.10.6",
    "google-genai>=1.27.0",
    "mcp[cli]>=1.12.2",
    "openai>=1.98.0",
    "requests>=2.32.4",
]
